// This file is auto-generated, DO NOT make any changes here
syntax = "proto3";
package SAP.internal.pt;


message CheckIn {
  bytes locationId = 1;
  uint32 startIntervalNumber = 2;
  uint32 endIntervalNumber = 3;
  uint32 transmissionRiskLevel = 4;
}
